--- a/jquery/carrinho.css
+++ b/jquery/carrinho.css
@@ -55,7 +55,7 @@ td {
 	text-decoration: none;
 	text-transform: uppercase;
 	
-	display: inline-block;
+	display: none;
 	padding: 0.5em;
 }
 
@@ -97,5 +97,9 @@ input[type=button] {
 
 .hovering {
 	background: #ccc;
+}
+
+#mostra-propagandas {
+	display: none;
 }
 
